<resources>
    <string name="app_name">StroyAppSubmission</string>
    <string name="login_image">login_image</string>
    <string name="login">Login</string>
    <string name="input_email">Masukkan email</string>
    <string name="input_password">Masukkan password</string>
    <string name="input_name">Masukkan nama</string>
    <string name="register">Register</string>
    <string name="welcome_image">welcome_image</string>
    <string name="welcome_text">Selamat datang di aplikasi submission!</string>
    <string name="register_image">register image</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="password_invalid">Password tidak boleh kurang dari 8 karakter</string>
    <string name="email_taken_error">Email has been taken</string>
    <string name="unknown_error">Unknown error received</string>
</resources>